# futu_tick_downloader

./: .env  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MAINTAINERS.md  Makefile  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  compose.yaml  pyproject.toml  requirements-dev.txt  run_snapshot_to_futu.command
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
agents/: PROJECT_MEMORY.md
docs/: 00-總覽.md  01-快速開始（本機）.md  02-部署到 AWS Lightsail（Ubuntu）.md  03-配置說明（.env）.md  04-運維 Runbook.md  05-Telegram 通知（產品化）.md  06-資料格式與查詢.md  07-貢獻指南（開發者）.md  08-發版流程.md  09-收盤後自動化（歸檔與本地拉取）.md  10-手動批次拉回與轉ZIP（低CPU）.md  README.md  STYLEGUIDE.zh-TW.md  _index.md  architecture.md  archive.md  configuration.md  deploy.md  deployment.md  faq.md  getting-started.md  hk-tickctl.md  observability.md  project-memory.md  quality.md  releasing.md  runbook.md  telegram-notify.md  telegram.md  translation_check.md  troubleshooting.md
hk-tick-collector/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
hk-tick-collector/.github/workflows/: ci.yml
hk-tick-collector/config/: collector.yaml
hk-tick-collector/docs/: architecture.md  runbook.md
hk-tick-collector/hk_tick_collector/: __init__.py  app.py  config.py  db.py  futu_client.py  health.py  main.py  mapping.py  models.py  normalizer.py  queue.py  sqlite_store.py  utils.py
hk-tick-collector/ops/: hk-tick-collector.service  verify.sh
hk-tick-collector/tests/: test_normalize.py  test_schema.py  test_shard.py
hk_tick_collector/: __init__.py  __main__.py  collector.py  config.py  db.py  futu_client.py  logging_config.py  main.py  mapping.py  market_state.py  models.py  utils.py
ops/: README.md  futu-opend.service  hk-tick-collector.service  install_collector.sh  restart_and_verify.sh  verify.sh
scripts/: check_doc_translation.sh  check_ts_semantics.py  convert_all_backup_to_futu_zip.command  db_health_check.sh  export_csv.py  export_symbol_zip.py  healthcheck.sh  hk-tickctl  install_systemd.sh  local_pull_convert.sh  mock_tick_replay.py  query_examples.sql  redeploy_hk_tick_collector.sh  repair_future_ts_ms.py  rollback_hk_tick_collector.sh  run_snapshot_to_futu.command  tail_logs.sh  verify_db.sh  verify_hk_tick_collector.sh
tests/: test_archiver.py  test_cli_validate.py  test_collector_shutdown.py  test_config.py  test_entrypoint.py  test_futu_client.py  (+10 more)
(+50 files in other folders)
