[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hk-tick-collector"
version = "0.1.0"
description = "Production-grade HK tick collector from Futu OpenD to SQLite WAL"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "hk-tick-collector maintainers" }
]
keywords = ["futu", "opend", "ticks", "sqlite", "systemd", "market-data"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "futu-api>=8.0.0",
  "pandas>=2.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "pre-commit>=3.7.0",
  "build>=1.2.1",
]

[project.urls]
Homepage = "https://github.com/billpwchan/futu_tick_downloader"
Repository = "https://github.com/billpwchan/futu_tick_downloader"
Issues = "https://github.com/billpwchan/futu_tick_downloader/issues"

[project.scripts]
hk-tick-collector = "hk_tick_collector.main:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["hk_tick_collector*"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["hk_tick_collector"]

[tool.coverage.report]
skip_covered = true
show_missing = true
